# Gradebook-Calculator

GradeBookCalc/: main.cpp
Gradebook V2/: CMakeLists.txt  Gradebook Aggregator.cpp  Transcript Aggregator.cpp  main.cpp
